Few Optimizations